[package]
name = "discord-repost-detector"
version = "1.1.0"
authors = ["MartinWienc <32913968+MartinWienc@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
reqwest = "0.11.1"
img_hash = "3.0"
serenity = "0.10"
chrono = "0.4"
image = "0.23.13"
regex = "1.3.9"
