[package]
name = "discord-repost-detector"
version = "1.3.2"
authors = ["MartinWienc <32913968+MartinWienc@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
reqwest = "0.11.3"
img_hash = "3.1.1"
serenity = "0.10.5"
chrono = "0.4.19"
image = "0.23.14"
